# local-monitoring-service

./: LICENSE  hello.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
