name:                hello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , digest
                     , split
  default-language:    Haskell2010

executable hello-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hello
                     , connection
                     , directory
                     , bytestring
                     , digest
                     , filepath
                     , websockets
                     , text
                     , mtl
                     , network
                     , split
                     , wuss
  default-language:    Haskell2010
  extra-libraries:   android

test-suite hello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hello
                     , connection
                     , directory
                     , bytestring
                     , digest
                     , filepath
                     , websockets
                     , text
                     , mtl
                     , network
                     , split
                     , wuss
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extra-libraries:   android

source-repository head
  type:     git
  location: https://github.com/githubuser/hello
